--- a/Sparser/documentation/categories/blocks-world.org
+++ b/Sparser/documentation/categories/blocks-world.org
@@ -1,7 +1,7 @@
 -*-org-*-
-#+DATE: 3/14/17 18:36:2
+#+DATE: 10/13/17 13:4:30
 
- + 0 top vars: {modifier, name, negation, raw-text, predicate, predication, ordinal, appositive-description, comp, subordinate-conjunction, quantifier, number, has-determiner, event-relation, amount-of-time, intensity, superlative-predication, comparative-predication, comparative, compared-to, superlative-from-set, category}
+ + 0 top vars: {modifier, name, negation, predicate, predication, ordinal, appositive-description, comp, subordinate-conjunction, quantifier, number, has-determiner, event-relation, amount-of-time, intensity, superlative-predication, comparative-predication, comparative, compared-to, superlative-from-set, that-rel, category}
   + 1 abstract 
     + 2 amount vars: {measurement, stuff, alternative-amount, time-period}
       + 3 amount-at-time vars: {amount, time}
@@ -19,20 +19,27 @@
         + 4 slashed-sequence 
         + 4 two-part-label vars: {part-one, part-two}
         + 4 word-colon-word vars: {left, right}
-    + 2 linguistic 
-      + 3 action-verb vars: {actor, patient, theme}
-        + 4 directed-action vars: {beneficiary}
-      + 3 control-verb vars: {patient, theme}
-      + 3 knowledge-verb vars: {experiencer}
+    + 2 information 
+    + 2 linguistic vars: {word}
+      + 3 demonstrative 
+        + 4 that 
+        + 4 these 
+        + 4 this 
+        + 4 those 
+      + 3 determiner vars: {word, det-quantifier}
+        + 4 a 
+        + 4 a 
+        + 4 an 
+        + 4 the 
       + 3 known-in-discourse 
       + 3 negative 
       + 3 no-space-prefix vars: {word}
       + 3 original-document-structure 
         + 4 html-markup-element 
           + 5 html-attribute vars: {attribute-value, tag}
-          + 5 html-tag 
-            + 6 empty-html-tag vars: {attributes, start-index, end-index, interior-start, action}
-            + 6 paired-html-tag vars: {attributes, contents, start-index, end-index, interior-start, interior-end, start-action, end-action}
+          + 5 html-tag vars: {attributes, start-index, end-index, interior-start}
+            + 6 empty-html-tag vars: {action}
+            + 6 paired-html-tag vars: {contents, interior-end, start-action, end-action}
         + 4 section-marker 
         + 4 section-object vars: {type, parent, daughters, prior-sibling, following-sibling, title, count, token-index}
         + 4 sgml-label 
@@ -43,17 +50,7 @@
       + 3 phrase-interpretation 
         + 4 as-comp vars: {prep, comp}
         + 4 copular-pp-rel-clause vars: {copular-pp}
-        + 4 determiner vars: {word, det-quantifier}
-          + 5 a 
-          + 5 a 
-          + 5 an 
-          + 5 that 
-          + 5 the 
-          + 5 these 
-          + 5 this 
-          + 5 those 
-          + 5 which 
-          + 5 whose 
+        + 4 partitive-relativizer vars: {quantifier, relativizer}
         + 4 pp-relative-clause vars: {pp, clause}
         + 4 prep-comp vars: {prep, comp}
         + 4 prepositional-phrase vars: {prep, pobj}
@@ -61,11 +58,27 @@
         + 4 subordinate-clause vars: {conj, comp}
         + 4 syntactic-there 
         + 4 to-comp vars: {prep, comp}
-      + 3 prop-attitude vars: {theme}
+      + 3 prepositional 
+        + 4 prepositional-operator 
+          + 5 about 
+          + 5 abreast-of 
+          + 5 according-to 
+          + 5 along-with 
+          + 5 amid 
+          + 5 among 
+          + 5 apart-from 
+          + 5 as 
+          + 5 as-a-result-of 
+          + 5 as-far-as 
+        + 4 spatial-operator 
+          + 5 dependent-location 
+            + 6 multiple-dependent-location 
       + 3 proposal-marker 
+        + 4 how-about-as-directive 
         + 4 let-as-directive 
         + 4 suppose-as-directive 
         + 4 what-if-as-directive 
+      + 3 question vars: {statement}
     + 2 measurement vars: {units, quantity}
       + 3 named-measure vars: {name}
       + 3 ordinal-fraction vars: {selector, unit}
@@ -92,9 +105,25 @@
         + 4 deictic-location vars: {name}
         + 4 direction vars: {name}
           + 5 compass-point vars: {name}
-        + 4 relative-location vars: {ground, prep}
-          + 5 object-dependent-location vars: {ground, prep}
-          + 5 orientation-dependent-location vars: {ground, prep}
+          + 5 relative-direction vars: {ground}
+            + 6 back 
+            + 6 down 
+            + 6 front 
+            + 6 left 
+            + 6 rear 
+            + 6 right 
+            + 6 up 
+        + 4 relative-location vars: {ground}
+          + 5 abaft 
+          + 5 abeam 
+          + 5 aboard 
+          + 5 above 
+          + 5 across 
+          + 5 across-from 
+          + 5 afore 
+          + 5 after 
+          + 5 against 
+          + 5 ahead-of 
         + 4 spatial-region vars: {interior, boundary}
           + 5 container vars: {contents}
       + 3 time 
@@ -111,64 +140,17 @@
         + 4 relative-time-noun vars: {name}
       + 3 timezone vars: {name}
     + 2 relation vars: {adverb}
+      + 3 actor vars: {actor}
+      + 3 agent vars: {agent}
+      + 3 beneficiary vars: {beneficiary}
       + 3 can-change-location vars: {former-location, present-location}
       + 3 conjunction vars: {word}
       + 3 dependent-substrate vars: {dependent, substrate}
+      + 3 experiencer vars: {experiencer}
       + 3 has-amount-as-level vars: {amount-as-level}
       + 3 has-an-orientation vars: {orientation}
       + 3 has-color vars: {color}
-      + 3 has-height vars: {height}
-      + 3 has-length vars: {length}
-      + 3 has-location vars: {location}
-      + 3 has-name vars: {name}
-        + 4 named-type vars: {type-of}
-          + 5 car-type 
-        + 4 predicate 
-          + 5 lambda-expression 
-          + 5 modifier 
-            + 6 aberrant 
-            + 6 able 
-            + 6 abnormal 
-            + 6 abundant 
-            + 6 accurate 
-            + 6 active 
-            + 6 adaptive 
-            + 6 adhesive 
-            + 6 adjacent 
-            + 6 advantageous 
-          + 5 prepositional-operator 
-            + 6 about 
-            + 6 abreast_of 
-            + 6 according_to 
-            + 6 along_with 
-            + 6 amid 
-            + 6 among 
-            + 6 apart_from 
-            + 6 as 
-            + 6 as_a_result_of 
-            + 6 as_far_as 
-          + 5 quality-predicate vars: {attribute, item}
-          + 5 quality-value-predicate vars: {attribute, value}
-            + 6 comparative-attribution vars: {reference-set, value}
-          + 5 quantifier vars: {word}
-          + 5 spatial-operator 
-            + 6 abaft 
-            + 6 abeam 
-            + 6 aboard 
-            + 6 above 
-            + 6 across 
-            + 6 across_from 
-            + 6 afore 
-            + 6 after 
-            + 6 against 
-            + 6 ahead_of 
     + 2 takes-numerical-value vars: {value}
-    + 2 unit-of-measure vars: {name}
-      + 3 fractional-term 
-        + 4 half vars: {name}
-        + 4 quarter vars: {name}
-      + 3 time-unit vars: {name}
-      + 3 unit-of-rate-of-change vars: {distance-measure, time-measure, name}
   + 1 endurant vars: {number, quantifier}
     + 2 non-physical 
       + 3 mental-object 
@@ -188,32 +170,36 @@
               + 7 stack 
               + 7 staircase vars: {part-type}
             + 6 motor-vehicle vars: {made-by}
+            + 6 structure 
+          + 5 ball 
+          + 5 box 
           + 5 object-face 
           + 5 rectangular-solid vars: {part-type}
             + 6 block 
               + 7 step vars: {part-of}
+            + 6 shelf 
             + 6 table 
         + 4 physical-agent 
           + 5 interlocutor 
           + 5 maker-of-artifacts 
             + 6 car-manufacturer vars: {product}
-  + 1 event-relation vars: {relation, event, subordinated-event}
-  + 1 perdurant vars: {theme, participant, time, location, purpose, circumstance, manner, occurs-at-moment}
+  + 1 perdurant vars: {participant, time, purpose, reason, circumstance, manner, occurs-at-moment}
     + 2 be vars: {subject, predicate}
     + 2 event 
+    + 2 event-relation vars: {relation, event, subordinated-event}
     + 2 process 
       + 3 build vars: {artifact}
       + 3 do vars: {agent, predicate}
       + 3 fail 
       + 3 find vars: {patient}
+      + 3 hold-something vars: {patient}
       + 3 know 
-      + 3 make vars: {object, adj-comp}
+      + 3 make vars: {adj-comp, actor, patient}
       + 3 make-artifacts vars: {procedure, product, type-of-product}
       + 3 move-something-somewhere vars: {theme}
-      + 3 push vars: {theme}
-        + 4 push-together vars: {items}
-      + 3 put-something-somewhere vars: {theme}
+      + 3 pull vars: {theme}
     + 2 state 
+      + 3 believe 
       + 3 expect 
       + 3 have vars: {possessor, thing-possessed}
       + 3 intend 
@@ -257,6 +243,7 @@
     + 2 designator 
       + 3 index 
         + 4 assession-number vars: {date, index-number}
+        + 4 illions-distribution vars: {number, illion, value}
         + 4 position-in-a-sequence vars: {number, item, sequence}
       + 3 name 
     + 2 qualifiable vars: {qualifier}
@@ -264,6 +251,9 @@
       + 3 scalar-quality 
   + 1 speech-act 
     + 2 acknowledgement vars: {name}
-    + 2 greeting vars: {name}
+    + 2 apology 
+    + 2 discourse-adverbial 
+      + 3 anyway 
+    + 2 greeting 
     + 2 sa-propose 
       + 3 explicit-suggestion vars: {marker, suggestion}
